Refactor Peeker from static to object instance.

--- a/docs_1.0.yaml
+++ b/docs_1.0.yaml
@@ -734,6 +734,6 @@ token:
 #                         token: token\n\t\t\ttoken: token\n\t\t\ttoken: token
 
 
-
-
+# \n - delimiter
+# \t - count tab is level indent
 
