Rename 'Line' on 'Row' and 'Offset' on 'Mark'.

--- a/docs_1.0.yaml
+++ b/docs_1.0.yaml
@@ -737,3 +737,11 @@ token:
 # \n - delimiter
 # \t - count tab is level indent
 
+Exceptions:
+  SyntaxException:
+    - IndentException
+    - DelimiterException
+    - ReferenceException
+
+  TypeException:
+    - Int32Exception
