Adder Marker. Init property with IType.

--- a/docs_1.0.yaml
+++ b/docs_1.0.yaml
@@ -1,4 +1,44 @@
 # Documentation - Документация
+
+
+
+# Features:
+
+#   Язык C# имеет статическую типизацию и типы данных в кофигурационном файле yanet
+#   будут зависеть от типов данных свойств объекта.
+
+# person:
+#   name: John
+#   age: 18
+
+# в первом случае значение 18 будет преобразовано в тип string
+# class Person
+# {
+#   public string Name { get; set; }
+#   public string Age { get; set; }
+# } 
+
+# во втором случае значение 18 будет преобразовано в тип int
+# class Person
+# {
+#  public string Name { get; set; }
+#  public int Age { get; set; }
+# }
+
+
+# в отличии от формата yanet, в json тип определяется явно через, например,
+# двойные ковычки:
+# "18" является типом string
+# 18 является числовым типом
+
+# Хотя в yanet существует явное выделение значения двойными ковычками
+# person:
+#   name: "John"
+#   age: "18"
+# и при попытке преобразовать в тип int, YaNet выдаст исключение
+
+
+
 # Чем отличается синтаксис тегов от нового синтаксиса ссылок?
 #
 # Вместо объявления новой переменной можно использовать каскад ссылок,
