--- a/YaNet.Samples/ex3.yaml
+++ b/YaNet.Samples/ex3.yaml
@@ -1,13 +1,10 @@
-﻿Matrix:
+﻿SteppedArray:
 	-
-		- 1
-		- 2
-		- 3
+		- 5645
+		- -2454
+		- 4536
+		- 7623
 	-
-		- 4
-		- 5
-		- 6
-	-
-		- 7
-		- 8
-		- 9
+		- -4
+		- 43
+		- 90009
