Indexes multiArray with IEnumerator.

--- a/YaNet.Samples/ex3.yaml
+++ b/YaNet.Samples/ex3.yaml
@@ -1,10 +1,41 @@
-﻿SteppedArray:
+﻿MultiArray:
 	-
-		- 5645
-		- -2454
-		- 4536
-		- 7623
+		-
+			- 910
+			- 240
+		-
+			- 910
+			- 240
+		-
+			- 910
+			- 240
 	-
-		- -4
-		- 43
-		- 90009
+		-
+			- 910
+			- 240
+		-
+			- 910
+			- 240
+		-
+			- 910
+			- 240
+	-
+		-
+			- 910
+			- 240
+		-
+			- 910
+			- 240
+		-
+			- 910
+			- 240
+	-
+		-
+			- 910
+			- 240
+		-
+			- 910
+			- 240
+		-
+			- 910
+			- 240
