--- a/YaNet.Samples/ex3.yaml
+++ b/YaNet.Samples/ex3.yaml
@@ -1,41 +1,3 @@
-﻿MultiArray:
-	-
-		-
-			- 10000
-			- 100001
-		-
-			- 710
-			- 266
-		-
-			- 5710
-			- 2400
-	-
-		-
-			- 476
-			- 6756
-		-
-			- 120
-			- -1240
-		-
-			- -910
-			- 13240
-	-
-		-
-			- 989
-			- 476
-		-
-			- 120
-			- -1240
-		-
-			- -910
-			- 13240
-	-
-		-
-			- 98900
-			- 47600
-		-
-			- 12000
-			- -124000
-		-
-			- -91000
-			- 132400
+﻿Name: ${John}
+Age: ${18} ${hello} ${world}
+Person: ${Name}
